@@ -8,3 +8,4 @@ See message http://groups.yahoo.com/group/zHercules/message/7228
 Initial IPL of MVT fails with waitstate 0007.  Immediately repeating the
 IPL will then miraculously work!
 
+
