@@ -1,7 +1,7 @@
 AC_INIT(hercules.h)
 AC_CONFIG_AUX_DIR(autoconf)
 
-AM_INIT_AUTOMAKE(hercules,3.00)
+AM_INIT_AUTOMAKE(hercules,3.00a.1)
 AM_CONFIG_HEADER(config.h)
 AM_MAINTAINER_MODE
 
